[gd_scene load_steps=2 format=3 uid="uid://beb7x12cm21ak"]

[ext_resource type="Script" path="res://scripts/Task4_SortParticles.gd" id="1_task4"]

[node name="Task4_SortParticles" type="Node2D"]
script = ExtResource("1_task4")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 200.0

[node name="LabelInstructions" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Sort Energy Particles"
theme_override_font_sizes/font_size = 16

[node name="LabelTimer" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Time: 15"

[node name="LabelStatus" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Sorted: 0/10"

[node name="SortButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Sort Particle"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SortButton" to="." method="_on_sort_button_pressed"]
